--- a/css/common.css
+++ b/css/common.css
@@ -3,13 +3,49 @@
 スマホ用のCSSはメデイアクエリの外に記述する
 */
 
+:root {
+    /* 背景色：ベースカラー */
+    --bg-base-color: white;
+    /* 背景色：メインカラー */
+    --bg-main-color: royalblue;
+    /* 背景色：アクセントカラー */
+    --bg-accent-color: springgreen;
+}
+
 body {
-    margin-left: 2em;
-    margin-right: 2em;
+    margin: 0px;
+}
+.HeaderArea {
+    display: flex;
+    width: 100%;
+    height: 70px;
+    background-color: var(--bg-main-color);
+    align-items: center;
+    position: fixed;
+    text-align: center;
 }
 
 .title {
-    color: brown;
+    font-size: x-large;
+    font-weight: bold;
+    color: white;
+    padding-left: 20px;
+}
+
+.MainArea {
+    width: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 110px;
+}
+
+.FooterArea {
+    display: flex;
+    width: 100%;
+    height: 100px;
+    background-color: var(--bg-main-color);
+    position: absolute;
+    bottom: 0;
 }
 
 /*=====================================
@@ -23,5 +59,7 @@ body {
 960px以上に適用されるCSS（PC用） 
 ======================================*/
 @media screen and (min-width: 960px) {
-    
+    header {
+        height: 40px;
+    }
 }
