--- a/css/common.css
+++ b/css/common.css
@@ -9,7 +9,7 @@
     /* 背景色：メインカラー */
     --bg-main-color: royalblue;
     /* 背景色：アクセントカラー */
-    --bg-accent-color: deepskyblue;
+    --bg-accent-color: silver;
     /* フォント：ベースカラー */
     --font-base-color: dimgray;
     /* フォント：メインカラー */
@@ -62,61 +62,13 @@ body {
     width: 100%;
     margin-top: 70px;
     margin-bottom: 80px;
+    text-align: center;
     z-index: 0;
 }
 
-.MainContent {
-    width: 100%;
-}
-
-.MainContent img {
-    width: 100%;
-    height: 220px;
-    object-fit: cover;
-    object-position: 0 70%;
-    opacity: 0.8;
-}
-.MainContent_TopText {
-    font-size: medium;
-    color: var(--font-base-color);
-    text-align: center;
-}
-.MainContent_navList {
-  margin-top: 80px;
-  width: 100%;
-  text-align: center;
-}
-
-.MainContent_navList_item {
-  display: inline-block;
-  width: 60%;
-  max-width: 300px;
-  border: 1px solid var(--font-base-color);
-  border-radius: 10px;
-}
-
-.MainContent_navList_item img {
-  width: 100%;
-  max-height: 150px;
-  border-radius: 10px 10px 0 0;
-  z-index: 8;
-}
-
-
-.MainContent_navList_item div {
-  display: flex;
-  width: 100%;
-  height: 40px;
-  margin-top: -5px;
-  background-color: var(--bg-main-color);
-  color: var(--font-main-color);
-  border-radius: 0 0 9px 9px;
-  align-items: center;
-  text-align: center;
-}
-
-.MainContent_navList_item p {
-  width: 100%;
+.PageTitle {
+  font-size: large;
+  font-weight: bold;
 }
 
 /*-------------------------
